--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,9 @@
 $black: #232323;
-$background: #ffdf8c;
+//$background: linear-gradient(120deg, #FAB162, #191919);
+$background: linear-gradient(120deg, #00597c, #01ccaa);
 $gray-line: #f6f6f6;
-$orange: #fe5f1e;
+//$orange: #fe5f1e;
+$orange: #00597c;
 
 $container-width: 90%;
 
