--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -4,7 +4,8 @@
 @import './components/all';
 
 body {
-  background-color: $background;
+  background-image: $background;
+  min-height: 100vh;
 }
 
 .wrapper {
