--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -56,6 +56,7 @@
   &--outline {
     background-color: #fff;
     border-color: $orange;
+
     &,
     span {
       color: $orange;
@@ -93,6 +94,11 @@
     background-color: rgba(255, 255, 255, 0.25);
     margin-left: 14px;
     margin-right: 14px;
+
+    @media (max-width: 1060px) {
+      width: 85px;
+      height: 1px;
+    }
   }
 
   &--add {
@@ -135,6 +141,11 @@
     line-height: 23px;
     padding: 12px 25px;
 
+    @media (max-width: 1060px) {
+      flex-direction: column;
+      padding: 10px 10px;
+    }
+
     svg {
       margin-right: 8px;
       margin-bottom: 1px;
@@ -143,6 +154,16 @@
     span {
       font-weight: 600;
       font-size: 16px;
+    }
+  }
+
+  &--price {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    @media (max-width: 1060px) {
+      margin-top: 4px;
     }
   }
 }
